--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-  "name": "TextRecognition App",
-  "short_name": "TextRecognition",
-  "start_url": "/Onnx-models/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#007bff",
-  "icons": [
-    {
-      "src": "image/png/icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ]
-}
+    "name": "TextRecognition App",
+    "short_name": "TextRecognition",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#007bff",
+    "icons": [
+      {
+        "src": "image/png/icon.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      }
+    ]
+  }
